cmake_minimum_required (VERSION 3.5)
project(modern-cxx)

#set(CMAKE_CXX_STANDARD 17)

# add_subdirectory(rvalue)
# add_subdirectory(variadic_templates)
# add_subdirectory(try)
# add_subdirectory(is_prime)
# add_subdirectory(concepts)
# add_subdirectory(compile-eval)
# add_subdirectory(sfinae)
# add_subdirectory(constexpr-map)
add_subdirectory(locale)
add_subdirectory(source_location)
